k8s/node-red/resources/internal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    gethomepage.dev/href: 'https://node-red.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: node-red
    gethomepage.dev/group: Other
    gethomepage.dev/icon: node-red
    gethomepage.dev/name: Node-Red
    gethomepage.dev/widget.type: customapi
    gethomepage.dev/widget.url: http://node-red-web-service.default/flows
    gethomepage.dev/widget.mappings.0.label: Flows
    gethomepage.dev/widget.mappings.0.format: size
    gethomepage.dev/widget.mappings.0.field: flows
spec:
  ingressClassName: internal
  rules:
    - host: &host node-red.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
